--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,9 @@
 @import url(variables.css);
+.pag1 {
+    border: 1px solid black;
+    
+}
+.imagen-fondo {
+    background-color: rgba(0, 0, 0, 0.11);
+    position: absolute;
+}
