--- a/css/variables.css
+++ b/css/variables.css
@@ -3,6 +3,7 @@
     --color-secundary: #17171e;
     --color-ternario: #323239;
     --color-font: #fff;
+    --fuente-titulo: Roboto Slab, serif;
 }
 
 /* Fuente Click Aqui : https://fonts.google.com/specimen/Roboto+Slab?preview.text=Contact%20Us%20For&query=%5BAachen */
