--- a/css/style.css
+++ b/css/style.css
@@ -103,9 +103,9 @@ nav {
 }
 .mit1 {
     display: flex;
-    height: 60vh;
+    height: 80vh;
     flex-direction: column;
-    align-items: start;
+    align-items: center;
     justify-content: center;
 }
 .art1{
@@ -116,8 +116,8 @@ nav {
     align-items: center;
 }
 .img3 {
-    width: 22vw;
-    height: 29vh;
+    width: 20vw;
+    height: 40vh;
 }
 .container2 {
     width: 15vw;
@@ -128,14 +128,14 @@ nav {
     display: flex;
     align-items: end;
     height: 80px;
-    font-size: xx-large;
+    font-size: 40px;
 }
 .container2 >p {
     line-height: 2;
-    
+    font-size: 18px;  
 }
 .mit2{
-    height: 130vh;
+    height: 110vh;
 }
 .forma {
     width: 99vw;
@@ -145,7 +145,7 @@ nav {
     height: 50vh;
     color: var(--color-font);
     position: absolute;
-    top:200vh;
+    top:220vh;
     left: 100px;
 }
 .container3 > h1 {
@@ -162,18 +162,50 @@ nav {
 .img4 {
     width: 30vw;
     position: absolute;
-    top:140vh;
+    top:160vh;
     right: 0;
 }
 .img5 {
     position: absolute;
     width: 35vw;
-    top:305vh;
+    top:325vh;
     left: 0;
 }
 .img6 {
     position: absolute;
     width: 60vw;
-    top:250vh;
+    top:270vh;
     right: 0;
+}
+.pag3 {
+    flex-direction: column;
+    display: flex;
+    height: 150vh;
+    background-color: var(--color-secundary);
+    align-items: center;
+}
+.divpag3{
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 100px;
+    color: var(--color-font);
+}
+.divpag3 > h1 {
+    padding: 80px;
+    font-size: 40px;
+    font-weight: bold;
+}
+.img7 {
+    padding: 20px;
+}
+.pag4 {
+    background-image:   url("../storage/img/placeYourImageHereOur0.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 100vh;
+}
+.container4 {
+    outline: solid red;
 }
