--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,9 @@ header{
 }
 .mnu {
     display: flex;
-    justify-content: space-between;
-    width: 300px;
+    justify-content: space-around;
+    width: 400px;
+    font-size: large
 }
 nav {
     display: flex;
@@ -52,6 +53,11 @@ nav {
 .menu {
     color: var(--color-font);
     text-decoration: none;
+}
+.menu:hover {
+    transition: 0.3s;
+    color: var(--color-primary);
+    cursor: pointer;
 }
 /*.imagen-fondo {
     position: absolute;
@@ -94,6 +100,13 @@ nav {
     font-size: large;
     font-weight: bold;
     border-radius: 3px;
+}
+.btn:hover{
+    transition: 0.3s;
+    cursor: pointer;
+    background-color: var(--color-boton);
+    border-radius: 10px;
+
 }
 .pag2{
     flex-direction: column;
@@ -180,7 +193,7 @@ nav {
 .pag3 {
     flex-direction: column;
     display: flex;
-    height: 150vh;
+    height: 200vh;
     background-color: var(--color-secundary);
     align-items: center;
 }
@@ -204,8 +217,144 @@ nav {
     background-image:   url("../storage/img/placeYourImageHereOur0.png");
     background-repeat: no-repeat;
     background-size: 100%;
-    height: 100vh;
+    height: 140vh;
+    display: flex;
 }
 .container4 {
-    outline: solid red;
+    outline: 10px solid yellow;
+    width: 800px;
+    height: 600px;
+    color: var(--color-font);
+    inset: 0;
+    margin: auto;
+    padding: 10px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    background-color: var(--color-container4);
+    font-family: var(--fuente-titulo);
+}
+.container4 >h1 {
+    font-size: 60px;
+    font-weight: bold;
+}
+.container4 >p {
+    justify-content: center;
+    height: 300px;
+    display: flex;
+    font-size: xx-large;
+    line-height: 1.5;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+.pag5 {
+    background-color: var(--color-secundary);
+    flex-direction: column;
+    display: flex;
+    height: 100vh;
+    align-items: center;
+}
+.pag5 >h1{
+    width: 200px;
+    height: 60px;
+    color: var(--color-font);
+    font-family: var(--fuente-titulo);
+    font-size: xx-large;
+    padding-top: 100px;
+    padding-bottom: 30px;
+}
+.containerprin {
+    width: 68vw;
+}
+.img9 {
+    width: 20vw;
+    padding: 15px;
+}
+.subcontainer {
+    display: flex;
+    height: 25vh;
+    font-family: var(--fuente-titulo);
+}
+.sub {
+    padding: 10px;
+}
+.sub >h1 {
+    color: var(--color-primary);
+    font-size: large;
+}
+.sub >p {
+    color: var(--color-font);
+    padding-top: 15px;
+    font-size: small;
+    padding-right: 30px;
+}
+.sub >h2 {
+    color: var(--color-primary);
+    padding-top: 15px;
+}
+.pag6 {
+    background-color: var(--color-secundary);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+}
+.cinta {
+    background-color: var(--color-primary);
+    height: 48vh;
+    display: flex;
+    justify-content: end;
+}
+.container5 {
+    padding-right: 50px;
+    width: 55vw;
+    color: var(--color-font);
+    font-family: var(--fuente-titulo);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.container5 >h1 {
+    font-size: 50px;
+}
+.container5 >p {
+    font-size: x-large;
+    font-weight: bold;
+    padding-top: 10px;
+    padding-right: 400px;
+}
+.resto {
+    background-color: var(--color-ternario);
+    height:32vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 40px;
+}
+.menufinal {
+    width: 50vw;
+    display: flex;
+    justify-content: space-around;
+    height: 15vh;
+    align-items: center;
+}
+.menufinal >a {
+    color: var(--color-font);
+    text-decoration: none;
+    
+}
+.menufinal >a:hover {
+    color: var(--color-primary);
+    transition: 0.3s;
+    cursor: pointer;
+}
+.img10 {
+    position: absolute;
+    top: 0;
+    width: 35vw;
+    top: 845vh;
+    left: 0;
+    width: 35vw;
 }
