--- a/css/variables.css
+++ b/css/variables.css
@@ -4,6 +4,8 @@
     --color-ternario: #323239;
     --color-font: #fff;
     --fuente-titulo: Roboto Slab, serif;
+    --color-container4:#17171ebb; 
+    --color-boton:#c58010;
 }
 
 /* Fuente Click Aqui : https://fonts.google.com/specimen/Roboto+Slab?preview.text=Contact%20Us%20For&query=%5BAachen */
