--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,9 @@ nav {
     color: var(--color-font);
     text-decoration: none;
 }
+.home {
+    color: var(--color-primary);
+}
 .menu:hover {
     transition: 0.3s;
     color: var(--color-primary);
@@ -193,40 +196,48 @@ nav {
 .pag3 {
     flex-direction: column;
     display: flex;
-    height: 200vh;
+    height: 120vh;
     background-color: var(--color-secundary);
     align-items: center;
 }
 .divpag3{
-    width: 80vw;
+    width: 60vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 100px;
     color: var(--color-font);
 }
 .divpag3 > h1 {
-    padding: 80px;
+    padding-top:  250px;
+    padding-bottom: 80px;
     font-size: 40px;
     font-weight: bold;
 }
+.galeria {
+    width: 48vw;
+    display: flex;
+    flex-wrap: wrap;
+}
 .img7 {
     padding: 20px;
+    width: 250px;
+    height: 270px;
 }
 .pag4 {
-    background-image:   url("../storage/img/placeYourImageHereOur0.png");
+    background-image:  url("../storage/img/placeYourImageHereOur0.png");
     background-repeat: no-repeat;
     background-size: 100%;
-    height: 140vh;
+    height: 120vh;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .container4 {
-    outline: 10px solid yellow;
-    width: 800px;
-    height: 600px;
+    outline: 10px solid var(--color-primary);
+    width: 870px;
+    height: 700px;
     color: var(--color-font);
-    inset: 0;
-    margin: auto;
     padding: 10px;
     align-items: center;
     display: flex;
@@ -253,7 +264,7 @@ nav {
     background-color: var(--color-secundary);
     flex-direction: column;
     display: flex;
-    height: 100vh;
+    height: 90vh;
     align-items: center;
 }
 .pag5 >h1{
@@ -262,11 +273,13 @@ nav {
     color: var(--color-font);
     font-family: var(--fuente-titulo);
     font-size: xx-large;
-    padding-top: 100px;
+    padding-top: 150px;
     padding-bottom: 30px;
 }
 .containerprin {
     width: 68vw;
+    inset: 0;
+    margin: auto;
 }
 .img9 {
     width: 20vw;
@@ -354,7 +367,7 @@ nav {
     position: absolute;
     top: 0;
     width: 35vw;
-    top: 845vh;
+    top: 735vh;
     left: 0;
     width: 35vw;
 }
