--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 header{
     background-image: linear-gradient(#17171e, #464545b9), url("../storage/img/placeYourImageHere0.png");
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     height: 100vh;
 }
 
@@ -21,11 +21,21 @@ header{
     width: 195vh;
     
 }
+.section1{
+    display: flex;
+    justify-content: center;
+}
 .mnu {
     display: flex;
     justify-content: space-around;
-    width: 400px;
-    font-size: large
+    width: 20vw;
+    font-size: 1vw
+}
+.icon1 {
+    width: 5vw;
+}
+.icon1 >img{
+    width: 100%;
 }
 nav {
     display: flex;
@@ -38,6 +48,7 @@ nav {
 .container1 {
     display: flex;
     height: 80vh;
+    width: 73vw;
     position: relative;
     z-index: 3;
     justify-content: space-evenly;
@@ -46,9 +57,7 @@ nav {
 .titulo {
     display: flex;
     flex-direction: column;
-    width: 60vh;
-    height: 50vh;
-    inset: 0;
+    width: 35vw;
 }
 .menu {
     color: var(--color-font);
@@ -73,16 +82,23 @@ nav {
     height: 100vh;
     object-fit: cover;
 }*/
+.containerimg2 {
+    max-width: 50vw;
+    height: auto;
+    box-sizing: border-box;
+}
 .img2 {
-    width: 600px;
-    height: 450px;
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
 .letratitulo {
     font-family: var(--fuente-titulo);
-    font-size: 400%;
+    font-size: 4vw;
     color: var(--color-primary);
     padding: 10px;
     font-weight: bold;
+    display: block;
 }
 .p1 {
     padding: 10px;
@@ -90,17 +106,18 @@ nav {
     font-weight: bold;
     line-height: 1.5;
     margin: 5px;
+    font-size: 1vw;
 }
 .btn {
     align-items: center;
     margin: 10px;
-    width: 130px;
-    height: 40px;
+    width: 10vw;
+    height: 5vh;
     display: flex;
     justify-content: center;
     background-color: var(--color-primary);
     border: none;
-    font-size: large;
+    font-size: 1.3vw;
     font-weight: bold;
     border-radius: 3px;
 }
@@ -126,14 +143,14 @@ nav {
 }
 .art1{
     display: flex;
-    width: 50vw;
+    width: 40vw;
     height: 40vh;
     justify-content: space-evenly;
     align-items: center;
 }
 .img3 {
     width: 20vw;
-    height: 40vh;
+    height: auto;
 }
 .container2 {
     width: 15vw;
@@ -144,11 +161,12 @@ nav {
     display: flex;
     align-items: end;
     height: 80px;
-    font-size: 40px;
+    font-size: 2.6vw;
 }
 .container2 >p {
-    line-height: 2;
-    font-size: 18px;  
+    padding-top: 15px;
+    line-height: 1.5;
+    font-size: 1vw;  
 }
 .mit2{
     height: 110vh;
@@ -165,13 +183,13 @@ nav {
     left: 100px;
 }
 .container3 > h1 {
-    font-size: 50px;
+    font-size: 4vw;
     padding: 10px;
 }
 .container3 > p {
     padding: 10px;
     width: 25vw;
-    font-size: 20px;
+    font-size: 1vw;
     font-weight: bold;
     line-height: 1.5;
 }
@@ -201,7 +219,7 @@ nav {
     align-items: center;
 }
 .divpag3{
-    width: 60vw;
+    width: 65vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -210,24 +228,26 @@ nav {
 }
 .divpag3 > h1 {
     padding-top:  250px;
-    padding-bottom: 80px;
-    font-size: 40px;
+    padding-bottom: 50px;
+    font-size: 2vw;
     font-weight: bold;
 }
 .galeria {
     width: 48vw;
     display: flex;
     flex-wrap: wrap;
+    inset: 0;
+    margin: auto;
 }
 .img7 {
     padding: 20px;
-    width: 250px;
-    height: 270px;
+    width: 13vw;
+    height: auto;
 }
 .pag4 {
     background-image:  url("../storage/img/placeYourImageHereOur0.png");
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     height: 120vh;
     display: flex;
     justify-content: center;
@@ -247,14 +267,15 @@ nav {
     font-family: var(--fuente-titulo);
 }
 .container4 >h1 {
-    font-size: 60px;
+    font-size: 4vw;
     font-weight: bold;
 }
 .container4 >p {
     justify-content: center;
     height: 300px;
     display: flex;
-    font-size: xx-large;
+    font-size: 2vw;
+    font-weight: bold;
     line-height: 1.5;
     text-align: center;
     padding-left: 50px;
@@ -272,7 +293,7 @@ nav {
     height: 60px;
     color: var(--color-font);
     font-family: var(--fuente-titulo);
-    font-size: xx-large;
+    font-size: 2vw;
     padding-top: 150px;
     padding-bottom: 30px;
 }
@@ -295,21 +316,21 @@ nav {
 }
 .sub >h1 {
     color: var(--color-primary);
-    font-size: large;
+    font-size: 1vw;
 }
 .sub >p {
     color: var(--color-font);
     padding-top: 15px;
-    font-size: small;
+    font-size: 0.8vw;
     padding-right: 30px;
 }
 .sub >h2 {
     color: var(--color-primary);
-    padding-top: 15px;
+    padding-top: 1vw;
 }
 .pag6 {
     background-color: var(--color-secundary);
-    height: 100vh;
+    height: 120vh;
     display: flex;
     flex-direction: column;
     justify-content: end;
@@ -330,10 +351,10 @@ nav {
     justify-content: center;
 }
 .container5 >h1 {
-    font-size: 50px;
+    font-size: 3.5vw;
 }
 .container5 >p {
-    font-size: x-large;
+    font-size: 1.5vw;
     font-weight: bold;
     padding-top: 10px;
     padding-right: 400px;
@@ -350,7 +371,7 @@ nav {
     width: 50vw;
     display: flex;
     justify-content: space-around;
-    height: 15vh;
+    height: 12vh;
     align-items: center;
 }
 .menufinal >a {
@@ -366,13 +387,22 @@ nav {
 .img10 {
     position: absolute;
     top: 0;
-    width: 35vw;
-    top: 735vh;
+    width: 30vw;
+    top: 755vh;
     left: 0;
     width: 35vw;
 }
 .iconos{
     display: flex;
     justify-content: center;
-    height: 50px;
+    height: 1vw;
+    font-size: 2vw;
+}
+.bx {
+    display: flex;
+    justify-content: space-between;
+    width: 4.5vw;
+}
+.bx:hover {
+    cursor: pointer;
 }
